--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<artifactId>download-center</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>download-center</name>
-	<description>Demo project for Spring Boot</description>
+	<name>CoDi Download Centre</name>
+	<description>CoDi Download Centre web application</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
