--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>org.cosmo-codios.apps</groupId>
-	<artifactId>download-center</artifactId>
+	<groupId>org.cosmo-codios.infra</groupId>
+	<artifactId>ota-hub</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>CoDi Download Centre</name>
